tests/negative/comptime/if_reduce_let_true_unit.orng
fn main() -> Int { 
    _ = if let x = 4 ; true { }
    321
} 
